doc: [stabled] [done] Documentation revision ok